--- a/views/partials/module/postCard.ejs
+++ b/views/partials/module/postCard.ejs
@@ -13,6 +13,11 @@
         <% } %>
     </div>
     <div class="card-body">
+        <% if(post.image) { %>
+        <div class="post-image mb-3">
+            <img src="./uploads/<%=post.image%>" class="img-fluid" />
+        </div>
+        <% } %>
         <p class="card-text"><%=post.content%></p>
     </div>
     <% if(isLoggedIn && (loggedInUser.id === post.createdBy)){%>
