--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,6 +34,30 @@
   font-size: 2rem;
 }
 
+.post-image {
+  background-color: #fff;
+  background-clip: border-box;
+  border-radius: 0.25rem;
+  overflow: hidden;
+}
+
+.post-image-container {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.delete-img-btn {
+  border-radius: 100%;
+  padding: 10px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 2;
+  background-color: #fff;
+  opacity: 1;
+}
+
 /* user page */
 .user-image {
   width: 100px;
