add new password screen

--- a/views/screens/createNewPassword.ejs
+++ b/views/screens/createNewPassword.ejs
@@ -1,5 +1,8 @@
 <%- include('../partials/module/pageHead', {title: 'Create new password'}) %>
-<strong class="mb-3">Create new password for j******@*****.**** user</strong>
+<% if(error.length && errors[error]){ %>
+<%- include('../partials/module/error', {message: error}) %>
+<% } else { %>
+<strong class="mb-3">Create new password for <%=cryptedEmail%> user</strong>
 
 <form method="post" action="/newPassword">
     <div class="mb-3">
@@ -10,8 +13,9 @@
         <label for="password-again" class="form-label">Password again</label>
         <input type="password" class="form-control" id="password-again" name="passwordAgain">
     </div>
-    <input type="hidden" name="uniqueHash" value="">
+    <input type="hidden" name="pwdToken" value="<%=pwdToken%>">
     <div class="d-flex align-items-center justify-content-end">
         <button type="submit" class="btn btn-primary">Send</button>
     </div>
 </form>
+<% } %>
