--- a/views/404.ejs
+++ b/views/404.ejs
@@ -3,17 +3,16 @@
     <div class="row">
         <div class="col-md-12 py-5">
             <div class="error-template text-center">
-                <h1>500</h1>
-                <h2>Internal Server Error</h2>
+                <h1>404</h1>
+                <h2>Page not found</h2>
                 <b>
                     Oops, something went wrong.
                 </b>
-                <p>Try to refresh this page or feel free to contact us is the problem is persists.</p>
+                <p>The page you are looking for might have been removed had its name changed or is temporarily
+                    unavailable</p>
                 <div class=" error-actions">
                     <a href="/" class="btn btn-primary btn-lg"><i class="fa fa-home" aria-hidden="true"></i>
                         Take Me Home </a>
-                    <a href="mailto:janos.perge@gmail.com" class="btn btn-secondary btn-lg"><i class="fa fa-envelope"
-                            aria-hidden="true"></i> Contact Support </a>
                 </div>
             </div>
         </div>
