fix uploaded image route

--- a/views/partials/module/postCard.ejs
+++ b/views/partials/module/postCard.ejs
@@ -15,7 +15,7 @@
     <div class="card-body">
         <% if(post.image) { %>
         <div class="post-image mb-3">
-            <img src="./uploads/<%=post.image%>" class="img-fluid" />
+            <img src="/uploads/<%=post.image%>" class="img-fluid" />
         </div>
         <% } %>
         <p class="card-text"><%=post.content%></p>
